Fixed whitespace below header by making height dynamic on width

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -7,7 +7,7 @@ $grid-gutter-width: 40px !default;
 $border-radius-base:  4px !default;
 $padding-base-vertical: 14px !default;
 
-$brand-primary: #B82A28 !default;
+$brand-primary: #761512 !default;
 $brand-secondary: #FFEA7A !default; 
 
 $brand-white: #fff;
@@ -383,12 +383,12 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 }
 .fh5co-cover {
-	height: 900px;
 	background-size: contain;
 	// background-position: center center;
 	background-repeat: no-repeat;
 	position: relative;
 	width: 100%;
+	height: 57vw;
 	.overlay {
 		z-index:0;
 		position: absolute;
@@ -407,7 +407,7 @@ h1, h2, h3, h4, h5, h6, figure {
 	}
 	.display-t,
 	.display-tc {
-		height: 900px;
+		height: 57vw;
 		display: table;
 		width: 100%;
 		@media screen and (max-width: $screen-sm) {
